--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- CSS -->
-        <link rel="stylesheet" href="../Styles/global_style.css">
-        <link rel="stylesheet" href="../Styles/home.css">
+        <link rel="stylesheet" href="Styles/global_style.css">
+        <link rel="stylesheet" href="Styles/home.css">
         <!-- Misc -->
         <script src="https://kit.fontawesome.com/5820f5dc5d.js" crossorigin="anonymous"></script> <!-- Icon -->
 
