Added mobile menu

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     </div>
                     <!-- Button because accessibility -->
                     
+                    <!-- Desktop sidebar -->
                     <div class="sidebar-items-container" id="sidebar-items-container">
                         <h6 href="#" class="sidebar-item" id="sidebar-home-item"><i class="fas fa-home"></i></i>Home</h6>
                         <a href="#" class="sidebar-item" id="sidebar-getting-started-item"><i class="fas fa-graduation-cap"></i>Lessons</a>
@@ -39,6 +40,14 @@
                         <a href="#" class="sidebar-item" id="sidebar-books-item"><i class="fas fa-book"></i>Dictionary</a>
                         <a href="#" class="sidebar-item" id="sidebar-contact-item"><i class="fas fa-phone-square-alt"></i>Contact</a>
                     </div>
+                </div>
+                <!-- For navbar mobile -->
+                <div class="mobile-items-container-navbar" id="mobile-items-container-navbar">
+                    <h6 href="#" class="sidebar-item-nav" id="sidebar-home-item-nav"><i class="fas fa-home"></i></i>Home</h6>
+                    <a href="#" class="sidebar-item-nav" id="sidebar-getting-started-item-nav"><i class="fas fa-graduation-cap"></i>Lessons</a>
+                    <a href="#" class="sidebar-item-nav" id="sidebar-books-item-nav"><i class="fas fa-book-reader"></i>Books</a>
+                    <a href="#" class="sidebar-item-nav" id="sidebar-books-item-nav"><i class="fas fa-book"></i>Dictionary</a>
+                    <a href="#" class="sidebar-item-nav" id="sidebar-contact-item-nav"><i class="fas fa-phone-square-alt"></i>Contact</a>
                 </div>
             </div>
             <!-- Sidebar ends-->
